# thumbnail-generator

./: .editorconfig  .gitignore  CONFIG.md  IMAGE_EXPORT.md  IMPLEMENTATION_SUMMARY.md  Makefile  README.md  SCAFFOLD_SUMMARY.md  docker-compose.yml  setup.sh
backend/: .dockerignore  .gitignore  README.md  main.py  pyproject.toml  requirements.txt
backend/app/: config.py  main.py
backend/app/api/: endpoints.py
backend/app/schemas/: thumbnail.py
backend/app/services/: gemini_service.py  image_export_service.py
backend/app/utils/: cleanup.py  file_storage.py
backend/tests/: test_endpoints_with_exports.py  test_image_export.py  test_thumbnails.py
config/: .env.example  README.md
frontend/: .dockerignore  .env.example  .eslintrc.cjs  .gitignore  Dockerfile  README.md  index.html  package-lock.json  package.json  tailwind.config.js  tsconfig.json  vite.config.js  vite.config.ts
frontend/src/: App.jsx  App.tsx  index.css
frontend/src/components/: Header.jsx  Hero3D.jsx  InputForm.jsx  ThumbnailGallery.jsx
frontend/src/layouts/: BaseLayout.tsx
frontend/src/store/: useStore.js
frontend/src/test/: ThumbnailGallery.integration.test.jsx  jsdom-setup.js  setup.js  store.integration.test.js
