[tool.poetry]
name = "thumbnail-generator-backend"
version = "0.1.0"
description = "FastAPI backend for thumbnail generator with Google Generative AI"
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
fastapi = "^0.104.1"
google-generativeai = "^0.3.0"
pillow = "^10.1.0"
python-multipart = "^0.0.6"
uvicorn = "^0.24.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
